kernel/src/stm32h7-linux/user/toybox/build_new.log
scripts/genconfig.sh
scripts/make.sh
generated/{Config.in
Warning: Config.probed changed, run 'make oldconfig'
,newtoys.h,flags.h}
Compile toybox
.................lib/xwrap.c: In function 'xpopen_setup':
lib/xwrap.c:258:33: warning: implicit declaration of function 'xfork'; did you mean 'vfork'? [-Wimplicit-function-declaration]
  258 |   if (!(pid = CFG_TOYBOX_FORK ? xfork() : XVFORK())) {
      |                                 ^~~~~
      |                                 vfork
.main.c: In function 'toy_singleinit':
main.c:222:7: warning: implicit declaration of function 'uselocale'; did you mean 'setlocale'? [-Wimplicit-function-declaration]
  222 |       uselocale(newlocale(LC_CTYPE_MASK, "C.UTF-8", 0) ? :
      |       ^~~~~~~~~
      |       setlocale
main.c:222:17: warning: implicit declaration of function 'newlocale'; did you mean 'setlocale'? [-Wimplicit-function-declaration]
  222 |       uselocale(newlocale(LC_CTYPE_MASK, "C.UTF-8", 0) ? :
      |                 ^~~~~~~~~
      |                 setlocale
main.c:222:27: error: 'LC_CTYPE_MASK' undeclared (first use in this function); did you mean 'LC_CTYPE'?
  222 |       uselocale(newlocale(LC_CTYPE_MASK, "C.UTF-8", 0) ? :
      |                           ^~~~~~~~~~~~~
      |                           LC_CTYPE
main.c:222:27: note: each undeclared identifier is reported only once for each function it appears in
lib/portability.c: In function 'xfork':
lib/portability.c:25:15: warning: implicit declaration of function 'fork' [-Wimplicit-function-declaration]
   25 |   pid_t pid = fork();
      |               ^~~~
lib/tty.c: In function 'scan_key_getsize':
lib/tty.c:244:12: warning: implicit declaration of function 'xpoll'; did you mean 'poll'? [-Wimplicit-function-declaration]
  244 |       if (!xpoll(&pfd, 1, maybe ? 30 : timeout_ms)) break;
      |            ^~~~~
      |            poll
lib/portability.c: In function 'xgetrandom':
lib/portability.c:43:9: warning: implicit declaration of function 'getentropy' [-Wimplicit-function-declaration]
   43 |     if (getentropy(buf, fd = buflen>256 ? 256 : buflen)) break;
      |         ^~~~~~~~~~
lib/deflate.c: In function 'init_deflate':
lib/deflate.c:406:52: warning: array subscript 1824 is outside array bounds of 'char[1024]' [-Warray-bounds=]
  406 |   len2huff(dd->fixlithuff = ((struct huff *)libbuf)+3, libbuf, 288);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from lib/deflate.c:11:
./toys.h:137:55: note: at offset 1824 into object 'libbuf' of size 1024
  137 | extern char **environ, *toybox_version, toybuf[1024], libbuf[1024];
      |                                                       ^~~~~~
lib/deflate.c:406:27: warning: array subscript 1824 is outside array bounds of 'char[1024]' [-Warray-bounds=]
  406 |   len2huff(dd->fixlithuff = ((struct huff *)libbuf)+3, libbuf, 288);
      |            ~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
./toys.h:137:55: note: at offset 1824 into object 'libbuf' of size 1024
  137 | extern char **environ, *toybox_version, toybuf[1024], libbuf[1024];
      |                                                       ^~~~~~
lib/deflate.c:408:53: warning: array subscript 2432 is outside array bounds of 'char[1024]' [-Warray-bounds=]
  408 |   len2huff(dd->fixdisthuff = ((struct huff *)libbuf)+4, libbuf, 30);
      |                              ~~~~~~~~~~~~~~~~~~~~~~~^~
./toys.h:137:55: note: at offset 2432 into object 'libbuf' of size 1024
  137 | extern char **environ, *toybox_version, toybuf[1024], libbuf[1024];
      |                                                       ^~~~~~
lib/deflate.c:408:28: warning: array subscript 2432 is outside array bounds of 'char[1024]' [-Warray-bounds=]
  408 |   len2huff(dd->fixdisthuff = ((struct huff *)libbuf)+4, libbuf, 30);
      |            ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
./toys.h:137:55: note: at offset 2432 into object 'libbuf' of size 1024
  137 | extern char **environ, *toybox_version, toybuf[1024], libbuf[1024];
      |                                                       ^~~~~~
In function 'inflate',
    inlined from 'gunzip_common' at lib/deflate.c:504:5:
lib/deflate.c:291:9: warning: array subscript 1216 is outside array bounds of 'char[1024]' [-Warray-bounds=]
  291 |         len2huff(disthuff = ((struct huff *)libbuf)+2, bits+litlen, distlen);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./toys.h: In function 'gunzip_common':
./toys.h:137:55: note: at offset 1216 into object 'libbuf' of size 1024
  137 | extern char **environ, *toybox_version, toybuf[1024], libbuf[1024];
      |                                                       ^~~~~~
make: *** [Makefile:18: toybox] Error 1
